Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:317:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:328:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:342:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                            ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void DrawBall_Pad(int*, Pictures, Ball*, Ball*, Ball)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:396:39: error: request for member 'x' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball1 .x - 55, *ball1 .y - 60, sizePad, sizePad, Photo .Pad, sizePad, sizePad);
                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:396:55: error: request for member 'y' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball1 .x - 55, *ball1 .y - 60, sizePad, sizePad, Photo .Pad, sizePad, sizePad);
                                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:401:39: error: request for member 'x' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball1 .x - 55, *ball1 .y - 100, sizePad, sizePad, Photo .Pad, 0, sizePad);
                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:401:55: error: request for member 'y' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball1 .x - 55, *ball1 .y - 100, sizePad, sizePad, Photo .Pad, 0, sizePad);
                                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:404:17: error: request for member 'y' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     if (*ball2 .y <= (H + 50)/2)
                 ^
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:406:39: error: request for member 'x' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball2 .x - 85, *ball2 .y - 58, sizePad, sizePad, Photo .Pad, 0, 0);;
                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:406:55: error: request for member 'y' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball2 .x - 85, *ball2 .y - 58, sizePad, sizePad, Photo .Pad, 0, 0);;
                                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:411:39: error: request for member 'x' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball2 .x - 85, *ball2 .y - 95, sizePad, sizePad, Photo .Pad, sizePad, 0);
                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:411:55: error: request for member 'y' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
         txAlphaBlend (txDC(), *ball2 .x - 85, *ball2 .y - 95, sizePad, sizePad, Photo .Pad, sizePad, 0);
                                                       ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:418:13: error: request for member 'vx' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     *ball1 .vx = 0;
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:419:13: error: request for member 'vy' in 'ball1', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     *ball1 .vy = 0
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:420:13: error: request for member 'vx' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     *ball2 .vx = 0;
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:421:13: error: request for member 'vy' in 'ball2', which is of pointer type 'Ball*' (maybe you meant to use '->' ?)
     *ball2 .vy = 0;
             ^
---------------------------------------------------------------------------------------------
[05.07.2021  3:01:24,03 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
